--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -27,9 +27,9 @@ gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", str
          total_turtle = density * Area,
          standprev = (prev - mean(prev)) / sd(prev),
          H = ifelse(prev <= 25, 0, 1),
-         Cov.y.0 = ifelse(year == 2004, 1, 0),
-         Cov.y.1 = ifelse(year == 2005, 1, 0),
-         Cov.y.2 = ifelse(year == 2006, 1, 0))
+         Cov_2004 = ifelse(year == 2004, 1, 0),
+         Cov_2005 = ifelse(year == 2005, 1, 0),
+         Cov_2006 = ifelse(year == 2006, 1, 0))
 ```
 
 # **Lecture et exploration des données**
@@ -139,7 +139,7 @@ Ceci se traduit en approche bayesienne par un modèle considérant les hypothès
 
 - `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure 2*), c'est-à-dire que c'est une variable discrète de comptage dans un intervale de temps et un espace donnés ; avec une variance égale à la moyenne $E(shells)=V(shells)= \lambda$
 - toutes les observations de `shells` sont **indépendantes**
-- le logarithme de la moyenne de `shells` peut être exprimée comme la combinaaison linéaire des variables explicatives sélectionnées.
+- le logarithme de la moyenne de `shells` peut être exprimée comme la combinaison linéaire des variables explicatives sélectionnées.
 - que les paramètres à estimer (ordonnée à l'origine et coefficients de regression) suivent des lois connues, explicités ci-après.
 
 Nous avons donc :
@@ -216,7 +216,7 @@ res1 <- M1$BUGSoutput$sims.matrix %>%
   as.data.frame()
 # Tentative de réro-transformation 
 
-shells1 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res))
+shells1 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res1))
 for (i in 1:nrow(gopher)){
   shells1[,i] <-gopher$Area[i] * exp(res1$mu.0 + res1$b.prev * gopher$standprev[i])
 }
@@ -256,10 +256,330 @@ Une analyse statistique passe toujours par l'ajustement d'un premier modèle sim
 En vous aidant de l'article, formez quelques hypothèses et construirez les modèles correspondant. Ajustez et comparez ces modèles pour déterminer l'hypothèse la mieux supportée par les données. N'oubliez de standardiser les variables explicatives continues avec la fonction scale() de R par exemple. Dans le cas d'une variable année, la standardisation est un peu différente, n'utilisez pas la fonction scale(). Si year <- c(2006, 2007, ... 2021) par exemple, utilisez simplement la variable year - 2005 qui vaut (1, 2, .... 16) pour avoir toujours une variable entière, mais qui commence à 1 et ne prend plus de grandes valeurs.
 
 
-Le modèle null : pas de covariable, pas d'effet aléatoire 
-Modèle où on ajoute les effets aléatoires 
-Modèle avec les covariables explicatives : une, l'autre, les deux 
-Eventuellement tester une intéraction si elle est pertinente
+Le modèle null `M0`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0$$
+```{r}
+# The null model function
+null_model <- function(){
+  # The null model does not take into account any of the variables. We just want to see the evolution of the number of shells
+  # Likelihood
+  for (i in 1:N){  # Loop over observations
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+}
+
+# Now, we can make list of the data to use in the jags function
+datax <- list(
+  N = gopher$year  %>% 
+    length(),
+  S = gopher$shells,        # Number of shells
+  A = gopher$Area          # Area offset
+)
+
+# Parameters to estimate
+params <- c("mu.0")
+
+# Initialising the chains
+init1 <- list(mu.0 = -0.5)
+init2 <- list(mu.0 = 0.5)
+init <- list(init1, init2)
+
+# Define the iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+# Run the model using jags
+M0 <- jags(
+  data = datax,
+  inits = init,
+  parameters.to.save = params,
+  model.file = null_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+M0
+
+# Evaluons la convergence du modèle
+traceplot(M1, mfrow=c(1, 2), ask=FALSE)
+par(mfrow = c(1, 1))
+
+# On récupère les paramètres et on regarde leur distribution
+res0 <- M1$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+hist(res0$mu.0)
+
+# Rétrotransformation
+shells0 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res0))
+for (i in 1:nrow(gopher)){
+  shells0[,i] <-gopher$Area[i] * exp(res0$mu.0)
+}
+hist(shells0)
+mean(shells0)
+
+# Récupérons le DIC
+DIC0 <- M0$BUGSoutput$DIC
+```
+
+
+Un modèle avec uniquement l'année `M3`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}$$
+```{r}
+# The year model function
+year_model <- function(){
+  # This model takes into account the variable year with it's 3 modalities.
+  # Likelihood
+  for (i in 1:N){  # Loop over observations
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + alpha_0 * Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+}
+
+# Now, we can make list of the data to use in the jags function
+datax <- list(
+  N = gopher$year  %>% 
+    length(),
+  S = gopher$shells,        # Number of shells
+  A = gopher$Area,          # Area offset
+  Cov_2004 = gopher$Cov_2004,  # Effect of the year 2004
+  Cov_2005 = gopher$Cov_2005,  # Effect of the year 2005
+  Cov_2006 = gopher$Cov_2006  # Effect of the year 2006
+)
+
+# Parameters to estimate
+params <- c("mu.0", "alpha_0","alpha_1", "alpha_2")
+
+# Initialising the chains
+init1 <- list(mu.0 = -0.5,alpha_0=-0.5, alpha_1=-0.5, alpha_2=-0.5)
+init2 <- list(mu.0 = 0.5, alpha_0=0.5, alpha_1=0.5, alpha_2=0.5)
+init <- list(init1, init2)
+
+# Define the iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+# Run the model using jags
+M3 <- jags(
+  data = datax,
+  inits = init,
+  parameters.to.save = params,
+  model.file = year_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+M3
+
+traceplot(M3, mfrow=c(1, 3), ask=FALSE)
+par(mfrow = c(1, 1))
+
+res3 <- M3$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+hist(res3$mu.0)
+hist(res3$alpha_0)
+hist(res3$alpha_1)
+hist(res3$alpha_2)
+
+# Rétrotransformation
+shells3 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res3))
+for (i in 1:nrow(gopher)){
+  shells3[,i] <-gopher$Area[i] * exp(res3$mu.0 + res3$alpha_0 * gopher$Cov_2004[i] + res3$alpha_1 * gopher$Cov_2005[i] + res3$alpha_2 * gopher$Cov_2006[i])
+}
+hist(shells3)
+mean(shells3)
+
+# Récupérons le DIC
+DIC3 <- M3$BUGSoutput$DIC
+```
+
+Un modèle avec l'année et la prévalence (continue) `M4`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006} + \beta * prev_i $$
+
+```{r}
+# The year model function
+year_prevalence_model <- function(){
+  # This model takes into account the variable year with it's 3 modalities.
+  # Likelihood
+  for (i in 1:N){  # Loop over observations
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + alpha_0 * Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + b.prev * prev[i] + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+  b.prev ~ dnorm(0, 1/100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+}
+
+# Now, we can make list of the data to use in the jags function
+datax <- list(
+  N = gopher$year  %>% 
+    length(),
+  S = gopher$shells,        # Number of shells
+  A = gopher$Area,          # Area offset
+  prev=gopher$standprev,     # Standardized prev
+  Cov_2004 = gopher$Cov_2004,  # Effect of the year 2004
+  Cov_2005 = gopher$Cov_2005,  # Effect of the year 2005
+  Cov_2006 = gopher$Cov_2006  # Effect of the year 2006
+)
+
+# Parameters to estimate
+params <- c("mu.0", "alpha_0","alpha_1", "alpha_2","b.prev")
+
+# Initialising the chains
+init1 <- list(mu.0 = -0.5,alpha_0=-0.5, alpha_1=-0.5, alpha_2=-0.5,b.prev =-0.5)
+init2 <- list(mu.0 = 0.5, alpha_0=0.5, alpha_1=0.5, alpha_2=0.5,b.prev=0.5)
+init <- list(init1, init2)
+
+# Define the iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+# Run the model using jags
+M4 <- jags(
+  data = datax,
+  inits = init,
+  parameters.to.save = params,
+  model.file = year_prevalence_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+M4
+
+traceplot(M4, mfrow=c(2, 3), ask=FALSE)
+par(mfrow = c(1, 1))
+
+res4 <- M4$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+hist(res4$mu.0)
+hist(res4$alpha_0)
+hist(res4$alpha_1)
+hist(res4$alpha_2)
+
+# Rétrotransformation
+shells4 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res4))
+names(res4)
+for (i in 1:nrow(gopher)){
+  shells4[,i] <-gopher$Area[i] * exp(res4$mu.0 + res4$alpha_0 * gopher$Cov_2004[i] + res4$alpha_1 * gopher$Cov_2005[i] + res4$alpha_2 * gopher$Cov_2006[i] + res4$b.prev)
+}
+hist(shells4)
+mean(shells4)
+
+# Récupérons le DIC
+DIC4 <- M4$BUGSoutput$DIC
+```
+
+Modèle avec année et site `M5` : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}+ \gamma_j\:\:avec\:\:j=1,...,10$$
+
+```{r}
+year_site_model <- function(){
+  # This model takes into account a random effect for the site
+  # Likelihood
+  for(i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + gamma[site[i]]+ alpha_0* Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  for (j in 1:nb.sites){
+    gamma[j] ~ dnorm(0, tau.s)
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 0.001)
+  sd.s ~ dunif(0, 100)
+  tau.s <- 1 / (sd.s * sd.s)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+} 
+
+# Make the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  A = gopher$Area,
+  site = gopher$Site %>% 
+    as.numeric(),
+  nb.sites = gopher$Site %>% 
+    unique() %>% 
+    length(),
+  Cov_2004 = ifelse(gopher$year == 2004, 1, 0),
+  Cov_2005 = ifelse(gopher$year == 2005, 1, 0),
+  Cov_2006 = ifelse(gopher$year == 2006, 1, 0)
+)
+
+# Make a list of parameters to save
+params = c("mu.0", "sd.s","alpha_0", "alpha_1", "alpha_2")
+
+# Initial conditions
+init1 <- list(
+  "mu.0" = 0.5,
+  "alpha_0" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5,
+  "sd.s" = 0.5
+)
+init2 <- list(
+  "mu.0" = - 0.5,
+  "alpha_0" = -0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5,
+  "sd.s" = 1.5
+)
+init <- list(init1, init2)
+
+# Iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+# Run the model
+M5 <- jags(
+  data = datax,
+  parameters.to.save = params,
+  inits = init,
+  model.file = year_site_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+# Regardons le modèle et les traces
+M5
+traceplot(M5, mfrow=c(2, 3), ask=FALSE)
+par(mfrow=c(1, 1))
+
+# On récupère les paramètres et on regarde leur distribution
+res5 <- M5$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+hist(res5$mu.0)
+hist(res5$alpha_0)
+hist(res5$alpha_1)
+hist(res5$alpha_2)
+hist(res5$sd.s)
+
+# Rétrotransformation
+
+shells5 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res5))
+for (i in 1:nrow(gopher)){
+  shells5[,i] <-gopher$Area[i] * exp(res5$mu.0 + res5$alpha_0 * gopher$Cov_2004[i] + res5$alpha_1 * gopher$Cov_2005[i] + res5$alpha_2 * gopher$Cov_2006[i] +rnorm(1,mean=0, sd=res5$sd.s))
+}
+hist(shells5)
+mean(shells5)
+
+# Récupérons le DIC
+DIC5 <- M5$BUGSoutput$DIC
+```
+
 Partir directement avec les effets aléatoires (prendre en compte la structuration des données)
 
 # **Inférence et interprétation des résultats**
@@ -274,19 +594,19 @@ random_model <- function(){
   # Likelihood
   for(i in 1:N){
     S[i] ~ dpois(lambda[i])
-    log(lambda[i]) <- mu.s + alpha.s[site[i]] + b.prev * prev[i] + alpha.y.0* Cov.y.0[i] + alpha.y.1 * Cov.y.1[i] + alpha.y.2 * Cov.y.2[i] + log(A[i])
+    log(lambda[i]) <- mu.0 + gamma[site[i]] + b.prev * prev[i] + alpha_0* Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
   }
   for (j in 1:nb.sites){
-    alpha.s[j] ~ dnorm(0, tau.s)
+    gamma[j] ~ dnorm(0, tau.s)
   }
   # Priors
-  mu.s ~ dnorm(0, 0.001)
+  mu.0 ~ dnorm(0, 0.001)
   sd.s ~ dunif(0, 100)
   tau.s <- 1 / (sd.s * sd.s)
   b.prev ~ dnorm(0, 1/100)
-  alpha.y.0 ~ dnorm(0, 1/100)
-  alpha.y.1 ~ dnorm(0, 1/100)
-  alpha.y.2 ~ dnorm(0, 1/100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
 } 
 
 # Make the data to use in jags
@@ -301,29 +621,29 @@ datax <- list(
   nb.sites = gopher$Site %>% 
     unique() %>% 
     length(),
-  Cov.y.0 = ifelse(gopher$year == 2004, 1, 0),
-  Cov.y.1 = ifelse(gopher$year == 2005, 1, 0),
-  Cov.y.2 = ifelse(gopher$year == 2006, 1, 0)
+  Cov_2004 = ifelse(gopher$year == 2004, 1, 0),
+  Cov_2005 = ifelse(gopher$year == 2005, 1, 0),
+  Cov_2006 = ifelse(gopher$year == 2006, 1, 0)
 )
 
 # Make a list of parameters to save
-params = c("mu.s", "b.prev", "sd.s","alpha.y.0", "alpha.y.1", "alpha.y.2")
+params = c("mu.0", "b.prev", "sd.s","alpha_0", "alpha_1", "alpha_2")
 
 # Initial conditions
 init1 <- list(
-  "mu.s" = 0.5,
+  "mu.0" = 0.5,
   "b.prev" = 0.5,
-  "alpha.y.0" = 0.5,
-  "alpha.y.1" = 0.5,
-  "alpha.y.2" = 0.5,
+  "alpha_0" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5,
   "sd.s" = 0.5
 )
 init2 <- list(
-  "mu.s" = - 0.5,
+  "mu.0" = - 0.5,
   "b.prev" = - 0.5,
-  "alpha.y.0" = -0.5,
-  "alpha.y.1" = -0.5,
-  "alpha.y.2" = -0.5,
+  "alpha_0" = -0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5,
   "sd.s" = 1.5
 )
 init <- list(init1, init2)
@@ -350,25 +670,23 @@ traceplot(M6, mfrow=c(2, 3), ask=FALSE)
 par(mfrow=c(1, 1))
 
 # On récupère les paramètres et on regarde leur distribution
-res <- M6$BUGSoutput$sims.matrix %>% 
+res6 <- M6$BUGSoutput$sims.matrix %>% 
   as.data.frame()
-hist(res$b.prev)
-hist(res$mu.s)
-hist(res$alpha.y.0)
-hist(res$alpha.y.1)
-hist(res$alpha.y.2)
-hist(res$sd.s)
+hist(res6$b.prev)
+hist(res6$mu.0)
+hist(res6$alpha_0)
+hist(res6$alpha_1)
+hist(res6$alpha_2)
+hist(res6$sd.s)
 
 # Rétrotransformation
 
-shells6 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res))
+shells6 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res6))
 for (i in 1:nrow(gopher)){
-  shells6[,i] <-gopher$Area * exp(res$mu.s[i] + res$alpha.y.0[i] * gopher$Cov.y.0 + res$alpha.y.1[i] * gopher$Cov.y.1 + res$alpha.y.2[i] * gopher$Cov.y.2 + res$b.prev[i] * gopher$standprev)
+  shells6[,i] <-gopher$Area[i] * exp(res6$mu.0 + res6$alpha_0 * gopher$Cov_2004[i] + res6$alpha_1 * gopher$Cov_2005[i] + res6$alpha_2 * gopher$Cov_2006[i] + res6$b.prev * gopher$standprev[i]+rnorm(1,mean=0, sd=res6$sd.s))
 }
 hist(shells6)
 mean(shells6)
-
-max(shells6)
 
 # Récupérons le DIC
 DIC6 <- M6$BUGSoutput$DIC
